<resources>
    <string name="app_name">Kinopoisk</string>
    <string name="login_edit_text_email">Enter email</string>
    <string name="login_edit_text_login">Enter login</string>
    <string name="login_edit_text_password">Enter password</string>
    <string name="login_button_enter">Enter</string>
    <string name="login_button_registration">Registration</string>
    <string name="movies">Movies</string>
    <string name="or">or</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="favorite">Favorites</string>
    <string name="description_for_additional_page">Description</string>
    <string name="rating">Kinopoisk rating</string>
    <string name="best_films">Best films</string>
    <string name="remove_from_favorite">Delete</string>
    <string name="share">Share</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="share_film">Share movie</string>
    <string name="menu_for_favorites_description">Menu for favorites</string>
    <string name="all_details">All details about the film</string>
    <string name="about_the_application">About the application</string>
    <string name="description">Welcome to Kinopoisk - an application for selecting films,
         created with love for cinema and technology! This is my pet project
          which combines convenience, modern design and powerful
           tools to find the perfect movie for the evening.</string>

    <string name="not_authorize">User is not authorized</string>
    <string name="no_featured_films">No featured films</string>
    <string name="share_movie">Share movie</string>
    <string name="delete_from_fr">The film has been removed from favorites</string>

    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="inncr_em_fr">Incorrect email format</string>
    <string name="ps_cannot_be_empty">Password cannot be empty</string>
    <string name="big_mist">Password must contain at least 8 characters, one number, one uppercase letter and one special character</string>
    <string name="sucess_log">Login successful!</string>
    <string name="not_email_or_pass">Incorrect email or password</string>
    <string name="user_not_found">User not found</string>
    <string name="login_not_found">Login not found</string>
    <string name="email_not_found">Email not found</string>


</resources>