<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragment.LoginFragment"
    android:background="@drawable/gradient_back_for_login">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/reg_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/baseline_account_circle_24_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/reg_email_edit_text"
        android:layout_width="300dp"
        android:layout_height="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_img"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_edit_text_for_login"
        android:textColor="@android:color/white"
        android:hint="@string/login_edit_text_email"
        android:paddingLeft="10dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/reg_password_edit_text"
        android:layout_width="300dp"
        android:layout_height="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_email_edit_text"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edit_text_for_login"
        android:textColor="@android:color/white"
        android:hint="@string/login_edit_text_password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:soundEffectsEnabled="false"
        android:focusable="false"
        android:clickable="true"
        android:text="@string/login_button_enter"
        android:background="@drawable/rounded_buttons_for_login"
        android:id="@+id/button_enter"
        android:layout_width="240dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_password_edit_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_or"
        android:gravity="center"
        android:text="@string/or"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/button_enter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:soundEffectsEnabled="false"
        android:focusable="false"
        android:clickable="true"
        android:text="@string/login_button_registration"
        android:background="@drawable/rounded_buttons_for_login"
        android:id="@+id/button_reg"
        android:layout_width="240dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@+id/text_or"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>