<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragment.AdditionalPageFilmFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/arrow_back"
        android:layout_margin="15dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/baseline_arrow_back_ios_new_24"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/description_for_additional_page"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/text_for_additional_page"
        android:lineSpacingExtra="3dp"
        android:layout_marginTop="65dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:textSize="16sp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/semi_transparent_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-16dp">


        <ImageButton
            android:contentDescription="@string/home"
            android:id="@+id/button_home"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:soundEffectsEnabled="false"
            android:src="@drawable/home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:contentDescription="@string/account"
            android:id="@+id/button_account"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:soundEffectsEnabled="false"
            android:src="@drawable/account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_favorites"
            app:layout_constraintStart_toEndOf="@+id/button_home"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="30dp"/>

        <ImageButton
            android:contentDescription="@string/favorite"
            android:id="@+id/button_favorites"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:soundEffectsEnabled="false"
            android:src="@drawable/star"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_account"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>