<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragment.HomeFragment"
    android:background="@color/black">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon_kinopoisk"
        android:layout_margin="10dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/kinopoisk"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/movies_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:text="@string/movies"
        app:layout_constraintStart_toEndOf="@+id/icon_kinopoisk"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/first_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/movies_title"
        app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/semi_transparent_gray"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:contentDescription="@string/home"
            android:id="@+id/button_home"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:soundEffectsEnabled="false"
            android:src="@drawable/home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:contentDescription="@string/account"
            android:id="@+id/button_account"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:soundEffectsEnabled="false"
            android:src="@drawable/account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_favorites"
            app:layout_constraintStart_toEndOf="@+id/button_home"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="30dp"/>

        <ImageButton
            android:contentDescription="@string/favorite"
            android:id="@+id/button_favorites"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:soundEffectsEnabled="false"
            android:src="@drawable/star"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_account"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>