<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragment.FilmPageFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_from_api"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"/>

    <View
        android:id="@+id/shadow_for_img"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/bottom_shadow_gradient"
        app:layout_constraintBottom_toBottomOf="@id/img_from_api"
        app:layout_constraintStart_toStartOf="@id/img_from_api"
        app:layout_constraintEnd_toEndOf="@id/img_from_api"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name_of_the_film"
        android:textColor="@color/white"
        tools:text="djngjdfhng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/img_from_api"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/information_about_film"
        android:textColor="@color/white"
        tools:text="djngjdfhngdjngjdfhngdjngjdfhngdjngjdfhngdjngjdfhngdjngjdfhng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="100dp"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/name_of_the_film"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <androidx.appcompat.widget.AppCompatImageButton
        android:background="@drawable/baseline_add_to_photos_24"
        android:id="@+id/button1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
    app:layout_constraintTop_toBottomOf="@+id/information_about_film"
    app:layout_constraintEnd_toStartOf="@+id/button2"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintHorizontal_chainStyle="packed"
    android:layout_marginEnd="20dp"
    />


    <androidx.appcompat.widget.AppCompatImageButton
        android:background="@drawable/baseline_backup_24"
        android:id="@+id/button2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="@id/button1"
    app:layout_constraintStart_toEndOf="@+id/button1"
    app:layout_constraintEnd_toEndOf = "parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:paddingHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:id="@+id/film_description"
        android:text="@string/description"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/shadow_for_text"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/bottom_shadow_gradient"
        app:layout_constraintBottom_toBottomOf="@id/film_description"
        app:layout_constraintStart_toStartOf="@id/film_description"
        app:layout_constraintEnd_toEndOf="@id/film_description"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/descriptiom_about_film"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Все детали о фильме"
        android:textColor="#fe5600"
        android:textSize="14sp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:paddingLeft="15dp"
    app:layout_constraintTop_toBottomOf="@id/film_description"
    app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintTop_toBottomOf="@id/descriptiom_about_film" />




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/semi_transparent_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-16dp">


        <ImageButton
            android:contentDescription="@string/home"
            android:id="@+id/button_home"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:soundEffectsEnabled="false"
            android:src="@drawable/home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:contentDescription="@string/account"
            android:id="@+id/button_account"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:soundEffectsEnabled="false"
            android:src="@drawable/account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_settings"
            app:layout_constraintStart_toEndOf="@+id/button_home"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="30dp"/>

        <ImageButton
            android:contentDescription="@string/favorite"
            android:id="@+id/button_settings"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:soundEffectsEnabled="false"
            android:src="@drawable/star"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_account"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>